--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,12 @@ edition = "2024"
 
 [dependencies]
 bitcoin = { version = "0.32.8", features = ["std","rand-std"] }
-bitcoin-address-generator = "0.1.0"
+# bitcoin-address-generator = "0.1.0"
+bip39 = "2.2.2"
+secp256k1 = { version = "0.28", features = ["rand"] }
+
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 dotenvy = "0.15"                      
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
-hex = "0.4"
-sha2 = "0.10"
