--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,7 @@ edition = "2024"
 
 [dependencies]
 bitcoin = { version = "0.32.8", features = ["std","rand-std"] }
-# bitcoin-address-generator = "0.1.0"
-bip39 = "2.2.2"
+bip39 = { version = "2.2.2", features = ["rand"] } # generate_in 方法需要启用
 secp256k1 = { version = "0.28", features = ["rand"] }
 
 serde = { version = "1.0", features = ["derive"] }
