--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ dotenvy = "0.15"
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 hex = "0.4.3"
+sha2 = { version = "0.10.9", features = ["asm"] }
